feat: preview comments in community feed
